--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,11 @@ services:
     links:
       - db
 
-  DB:
+  db:
     image: postgres
     volumes:
       - 'db-data:/var/lib/postgresql/data'
     environment:
       - 'POSTGRES_USER=postgres'
       - 'POSTGRES_PASSWORD=postgres'
+      - 'POSTGRES_HOST_AUTH_METHOD=trust'
